--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
-# Byte-compiled / optimized / DLL files
+.idea/
+.DS_Store/
+.gitignore
+
+#Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
 *$py.class
